add about us basic ver.

--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
 					<p>HOME</p>
 				</div>
 				<div class="nav-item">
-					<p>关于我们</p>
+					<a href="page/AboutUs.html"><p>关于我们</p></a>
 					<p>ABOUT</p>
 				</div>
 				<div class="nav-item">
@@ -251,7 +251,7 @@
 					<p>JOIN US</p>
 				</div>
 				<div class="nav-item">
-					<a href="messages.html"><p>在线留言</p>
+					<a href="page/Messages.html"><p>在线留言</p>
 					<p>MESSAGES</p></a>
 				</div>
 				<div class="nav-item">
@@ -264,9 +264,9 @@
 		<div class="slider-area">
 			<div class="swiper-container">
 				<div class="swiper-wrapper">
-					<div class="swiper-slide" data-name="光大VISA世界杯卡" data-card-id="20423"><img src="img/index/34f8fdcb-5e33-4604-942c-0472ef01ddad.jpg" /></div>
-					<div class="swiper-slide" data-name="光大VISA世界杯卡" data-card-id="20423"><img src="img/index/8077ef81-7014-4b47-b323-41a6e8bcce59.jpg" /></div>
-					<div class="swiper-slide" data-name="光大VISA世界杯卡" data-card-id="20423"><img src="img/index/9933395f-485d-4051-b61c-85e56b4a5ab6.jpg" /></div>
+					<div class="swiper-slide"><img src="img/index/34f8fdcb-5e33-4604-942c-0472ef01ddad.jpg" /></div>
+					<div class="swiper-slide"><img src="img/index/8077ef81-7014-4b47-b323-41a6e8bcce59.jpg" /></div>
+					<div class="swiper-slide"><img src="img/index/9933395f-485d-4051-b61c-85e56b4a5ab6.jpg" /></div>
 				</div>
 			</div>
 		</div>
