add honers contact us

--- a/index.html
+++ b/index.html
@@ -231,16 +231,20 @@
 					<p>HOME</p>
 				</div>
 				<div class="nav-item">
-					<a href="page/AboutUs.html"><p>关于我们</p></a>
-					<p>ABOUT</p>
+					<a href="page/AboutUs.html">
+						<p>关于我们</p>
+						<p>ABOUT</p>
+					</a>
 				</div>
 				<div class="nav-item">
 					<p>工程业绩</p>
 					<p>CASE</p>
 				</div>
 				<div class="nav-item">
-					<p>荣誉资质</p>
-					<p>HONORS</p>
+					<a href="page/Honors.html">
+						<p>荣誉资质</p>
+						<p>HONORS</p>
+					</a>
 				</div>
 				<div class="nav-item">
 					<p>新闻资讯</p>
@@ -251,12 +255,16 @@
 					<p>JOIN US</p>
 				</div>
 				<div class="nav-item">
-					<a href="page/Messages.html"><p>在线留言</p>
-					<p>MESSAGES</p></a>
+					<a href="page/Messages.html">
+						<p>在线留言</p>
+						<p>MESSAGES</p>
+					</a>
 				</div>
 				<div class="nav-item">
-					<p>联系我们</p>
-					<p>CONTAXT</p>
+					<a href="page/ContactUs.html">
+						<p>联系我们</p>
+						<p>CONTACT</p>
+					</a>
 				</div>
 			</nav>
 		</div>
