update 404.html style

--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
 					<div class="col-5 intro">
 						<p><img src="img/index/637c014a-f423-4d0e-b096-5034a2f70b16.png" /></p>
 						<p>
-							瑞丰电力工程集团有限公司坐落于著有中国雪乡美称的牡丹江市，公司主要从事220KV及以下送电工程及同电压等级变电站安装工程，110KV及以下变配电配套设备调试，电力器材销售，用电技术咨询等业务。瑞丰电力工程集团有限公司具备电力工程施工总承包贰级、送变电工程专业承包贰级；承装（修、试）类电力设施许可二级许可；安全生产许可证；质量、环境、职业健康安全管理体制认证证书，现有注册资金6500万元。
+							北京华丰科能新能源科技有限公司坐落于著有中国雪乡美称的牡丹江市，公司主要从事220KV及以下送电工程及同电压等级变电站安装工程，110KV及以下变配电配套设备调试，电力器材销售，用电技术咨询等业务。北京华丰科能新能源科技有限公司具备电力工程施工总承包贰级、送变电工程专业承包贰级；承装（修、试）类电力设施许可二级许可；安全生产许可证；质量、环境、职业健康安全管理体制认证证书，现有注册资金6500万元。
 						</p>
 					</div>
 					<div class="col-4">
@@ -402,7 +402,7 @@
 			<div class="footer-area">
 				<div class="footer">
 					<div class="copyright">
-						<p> Copyright © 瑞丰电力工程集团有限公司 All Rights Reserved</p>
+						<p> Copyright © 北京华丰科能新能源科技有限公司 All Rights Reserved</p>
 					</div>
 					<div class="support">
 						<p>
