add blinds anime, add flip anime

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<!--公有css-->
 		<link rel="stylesheet" type="text/css" href="public/public.css" />
 		<!--私有css-->
-		<link rel="stylesheet" type="text/css" href="" />
+		<link rel="stylesheet" type="text/css" href="css/index.css" />
 
 		<!--bootstap-->
 		<script src="lib/jquery/jquery-3.3.1.js" type="text/javascript" charset="utf-8"></script>
@@ -28,221 +28,8 @@
 		<!--公有js-->
 		<script src="public/public.js" type="text/javascript" charset="utf-8"></script>
 		<!--私有js-->
-		<script src="" type="text/javascript" charset="utf-8"></script>
+		<script src="js/index.js" type="text/javascript" charset="utf-8"></script>
 
-		<style type="text/css">
-			html {
-				width: 100%;
-				background: url(img/index/top.png) no-repeat center top;
-			}
-			
-			.top-area {
-				width: 1200px;
-				/*min-height: 132px;*/
-				margin: 0 auto;
-			}
-			
-			.top-area .row {
-				margin: 30px 0;
-			}
-			
-			.top-area .row .col-3,
-			.top-area .row .col-2 {
-				text-align: center;
-				line-height: 66px;
-			}
-			
-			.nav-bar-area {
-				background-color: #0a2f7d;
-				width: 100%;
-				min-height: 80px;
-			}
-			
-			.nav-bar {
-				width: 1200px;
-				height: 100%;
-				margin: 0 auto;
-				color: white;
-				overflow: hidden;
-			}
-			
-			.nav-bar .nav-item {
-				float: left;
-				padding: 16px 3%;
-				text-align: center;
-			}
-			
-			.nav-bar .nav-item p {
-				/*cursor: pointer;*/
-				margin-bottom: 0px;
-			}
-			
-			.nav-bar .nav-item a {
-				color: white;
-				text-decoration: none;
-			}
-			
-			.slider-area {
-				width: 100%;
-			}
-			
-			.shutter {
-				margin: 0 auto;
-				border-radius: 0;
-			}
-			
-			.shutter-btn li {
-				list-style: none;
-			}
-			
-			.shutter-btn li.prev {
-				opacity: 0.7;
-			}
-			
-			.shutter-btn li.next {
-				opacity: 0.7;
-			}
-			
-			.swiper-slide {
-				/*width: 100%;*/
-				margin: 0 auto;
-			}
-			
-			.message-area {
-				background-color: #f2f2f2;
-				width: 100%;
-				height: 70px;
-				line-height: 70px;
-				font-size: 14px;
-			}
-			
-			.message-area .row {
-				width: 1200px;
-				margin: 0 auto;
-				list-style-type: none;
-			}
-			
-			.about-area {
-				width: 1200px;
-				margin: 50px auto;
-				text-align: center;
-			}
-			
-			.about-area .row .intro {
-				text-align: left;
-			}
-			
-			.performance-area {
-				width: 1200px;
-				margin: 0 auto;
-			}
-			
-			.performance-area .hear-bar {}
-			
-			.performance-area .content {
-				padding-top: 20px;
-			}
-			
-			.performance-area .case-show .swiper-slide img {
-				width: 300px;
-				height: 245px;
-			}
-			
-			.news-area {
-				width: 1200px;
-				margin: 20px auto;
-			}
-			
-			.news-area .news .first-news .img {
-				width: 100%;
-				padding: 20px;
-			}
-			
-			.news-area .news .first-news .content {
-				padding-top: 30px;
-			}
-			
-			.news-area .news .first-news .content .first-news-header {
-				color: #0a2f7d;
-				font-size: 18px;
-				font-weight: bold;
-			}
-			
-			.news-area .news .first-news .content .first-news-content {
-				line-height: 24px;
-				color: #666;
-				font-size: 13px;
-			}
-			
-			.news-area .news .first-news .content .first-news-more {
-				text-align: center;
-				background-color: #008141;
-				width: 90px;
-				display: block;
-				height: 26px;
-				color: #fff;
-				font-size: 14px;
-				font-weight: bold;
-				line-height: 26px;
-			}
-			
-			.news-area .board {
-				text-align: right;
-			}
-			
-			.news-area .news-list ul {
-				padding: 0;
-			}
-			
-			.news-area .news-list ul li {
-				border-bottom: #ccc 1px dashed;
-				line-height: 35px;
-				padding-left: 12px;
-				background: url(img/index/xw_ico.png) no-repeat 0px center;
-				color: #000;
-				font-size: 14px;
-				font-weight: normal;
-				list-style: none;
-			}
-			
-			.footer-area {
-				background-color: #00428c;
-				width: 100%;
-				height: 50px;
-			}
-			
-			.footer-area .footer {
-				width: 1200px;
-				margin: 0 auto;
-				color: white;
-				font-size: 12px;
-				text-decoration: none;
-			}
-			
-			.footer-area .footer .copyright {
-				float: left;
-				margin: 0;
-				line-height: 50px;
-			}
-			
-			.footer-area .footer .copyright p {
-				margin: 0;
-			}
-			
-			.footer-area .footer .support {
-				float: right;
-				margin: 0;
-				line-height: 50px;
-			}
-			
-			.footer-area .footer .support p {
-				margin: 0;
-			}
-			
-			.footer-area .footer .support a {
-				color: white;
-			}
-		</style>
 	</head>
 
 	<body>
@@ -317,9 +104,9 @@
 		<div class="slider-area">
 			<div class="shutter">
 				<div class="shutter-img">
-					<a href="#" data-shutter-title=""><img src="img/index/34f8fdcb-5e33-4604-942c-0472ef01ddad.jpg" /></a>
-					<a href="#" data-shutter-title=""><img src="img/index/8077ef81-7014-4b47-b323-41a6e8bcce59.jpg" /></a>
-					<a href="#" data-shutter-title=""><img src="img/index/9933395f-485d-4051-b61c-85e56b4a5ab6.jpg" /></a>
+					<a href="page/Case.html" data-shutter-title=""><img src="img/index/34f8fdcb-5e33-4604-942c-0472ef01ddad.jpg" /></a>
+					<a href="page/Case.html" data-shutter-title=""><img src="img/index/8077ef81-7014-4b47-b323-41a6e8bcce59.jpg" /></a>
+					<a href="page/Case.html" data-shutter-title=""><img src="img/index/9933395f-485d-4051-b61c-85e56b4a5ab6.jpg" /></a>
 				</div>
 				<ul class="shutter-btn">
 					<li class="prev"></li>
@@ -329,6 +116,17 @@
 					<p>slide title</p>
 				</div>-->
 			</div>
+			<div class="shutter-clone">
+				<div class="shutter-img">
+					<a href="page/Case.html" data-shutter-title=""><img src="img/index/34f8fdcb-5e33-4604-942c-0472ef01ddad.jpg" /></a>
+					<a href="page/Case.html" data-shutter-title=""><img src="img/index/8077ef81-7014-4b47-b323-41a6e8bcce59.jpg" /></a>
+					<a href="page/Case.html" data-shutter-title=""><img src="img/index/9933395f-485d-4051-b61c-85e56b4a5ab6.jpg" /></a>
+				</div>
+				<ul class="shutter-btn">
+					<li class="prev"></li>
+					<li class="next"></li>
+				</ul>
+			</div>
 		</div>
 		<!--message-->
 		<div class="message-area">
@@ -337,14 +135,14 @@
 					<p><img src="img/index/gg_ico.png"><span style="color: #0a2f7d; font-size: 15px; font-weight: bold;">&nbsp;&nbsp;&nbsp; 通知公告：</span></p>
 				</div>
 				<div class="col-7">
-					<a href="/news_detail/newsId=211.html" title="国网黑龙江关于供应商不良行为处理情况的通报(2017年11月)" target="_self">
+					<a href="page/News.html" title="国网黑龙江关于供应商不良行为处理情况的通报(2017年11月)" target="_self">
 						国网黑龙江关于供应商不良行为处理情况的通报(2017年11月)</a>
 				</div>
 				<div class="col-2">
 					<span>发布时间：</span>2017-12-01
 				</div>
 				<div class="col-1">
-					<img src="img/index/gg_more.png" />
+					<a href="page/News.html"><img src="img/index/gg_more.png" /></a>
 				</div>
 			</div>
 		</div>
@@ -354,7 +152,7 @@
 			<div class="about-area">
 				<div class="row">
 					<div class="col-3">
-						<img src="img/index/gywm.png" />
+						<a href="page/AboutUs.html"><img src="img/index/gywm.png" /></a>
 					</div>
 					<div class="col-5 intro">
 						<p><img src="img/index/637c014a-f423-4d0e-b096-5034a2f70b16.png" /></p>
@@ -363,26 +161,68 @@
 						</p>
 					</div>
 					<div class="col-4">
-						<img src="img/index/qywh.jpg" />
+						<a href="page/EnterpriseCulture.html"><img src="img/index/qywh.jpg" /></a>
 					</div>
 				</div>
 			</div>
 			<!--performance-->
 			<div class="performance-area">
 				<div class="hear-bar">
-					<img src="img/index/gcyj.png" />
+					<a href="page/Case.html"><img src="img/index/gcyj.png" /></a>
 				</div>
 				<div class="content">
-					<div class="swiper-container case-show">
-						<div class="swiper-wrapper">
-							<div class="swiper-slide"><img src="img/index/12dbcda7-89ec-4028-8df0-f85a29e910a6.jpg" /></div>
-							<div class="swiper-slide"><img src="img/index/331235db-6200-48cf-8f17-b6299d2dffb3.jpg" /></div>
-							<div class="swiper-slide"><img src="img/index/3e9d0bd8-6254-48c8-be4e-f920fc0942a4.jpg" /></div>
-							<div class="swiper-slide"><img src="img/index/944245c1-725e-4e66-98d4-7456a1769f1f.jpg" /></div>
-							<div class="swiper-slide"><img src="img/index/c857dd1f-7644-491e-bb8b-a2cd16c4d58f.jpg" /></div>
-							<div class="swiper-slide"><img src="img/index/cd60680a-9370-4175-afbe-12b7e253f1e5.jpg" /></div>
+					<div id="marquee1" class="marqueeleft">
+						<div style="width:8000px;">
+							<ul id="marquee1_1">
+								<li>
+									<a class="pic" href="http://sc.chinaz.com/"><img src="img/index/12dbcda7-89ec-4028-8df0-f85a29e910a6.jpg"></a>
+									<div class="txt">
+										<a href="/products_detail/productId=34.html" title="建分水22#临时变台工程建新工程" target="_self">
+											建分水22#临时变台工程建新工...</a>
+									</div>
+								</li>
+								<li>
+									<a class="pic" href="http://sc.chinaz.com/"><img src="img/index/331235db-6200-48cf-8f17-b6299d2dffb3.jpg"></a>
+									<div class="txt">
+										<a href="/products_detail/productId=24.html" title="大理剑川雪邦山风电项目场区配电工程" target="_self">
+											大理剑川雪邦山风电项目场区配电...</a>
+									</div>
+								</li>
+								<li>
+									<a class="pic" href="http://sc.chinaz.com/"><img src="img/index/3e9d0bd8-6254-48c8-be4e-f920fc0942a4.jpg"></a>
+									<div class="txt">
+										<a href="/products_detail/productId=36.html" title="龙源大庆风电项目筹建处绿色草原项目场区配网" target="_self">
+											龙源大庆风电项目筹建处绿色草原...</a>
+									</div>
+								</li>
+								<li>
+									<a class="pic" href="http://sc.chinaz.com/"><img src="img/index/944245c1-725e-4e66-98d4-7456a1769f1f.jpg"></a>
+									<div class="txt">
+										<a href="/products_detail/productId=21.html" title="安利达沥青有限公司400KVA变压器移设工程" target="_self">
+											安利达沥青有限公司400KVA...</a>
+									</div>
+								</li>
+								<li>
+									<a class="pic" href="http://sc.chinaz.com/"><img src="img/index/c857dd1f-7644-491e-bb8b-a2cd16c4d58f.jpg"></a>
+									<div class="txt">
+										<a href="/products_detail/productId=25.html" title="云南陆良仕官风电项目场区配电施工工程" target="_self">
+											云南陆良仕官风电项目场区配电施...</a>
+									</div>
+								</li>
+								<li>
+									<a class="pic" href="http://sc.chinaz.com/"><img src="img/index/cd60680a-9370-4175-afbe-12b7e253f1e5.jpg"></a>
+									<div class="txt">
+										<a href="/products_detail/productId=35.html" title="飞龙潭山庄10KV外线及变电所新建工程" target="_self">
+											飞龙潭山庄10KV外线及变电所...</a>
+									</div>
+								</li>
+							</ul>
+							<ul id="marquee1_2"></ul>
 						</div>
 					</div>
+					<!--marqueeleft end-->
+					<script type="text/javascript">
+					</script>
 				</div>
 			</div>
 			<!--news-->
@@ -391,7 +231,7 @@
 					<div class="col-7">
 						<div class="news">
 							<div class="hear-bar">
-								<img src="img/index/xwzx.png" />
+								<a href="page/News.html" style="display: inline-block;"><img src="img/index/xwzx.png" /></a>
 							</div>
 							<div class="first-news">
 								<div class="row">
@@ -399,19 +239,24 @@
 										<img src="img/index/first-news.jpg" style="width: 100%;" />
 									</div>
 									<div class="col-8 content">
-										<h4 class="first-news-header">勇担电网企业使命 助力现代化新龙江建设</h4>
+										<h4 class="first-news-header"><a href="page/News.html">勇担电网企业使命 助力现代化新龙江建设</a></h4>
 										<p class="first-news-content">22462692018-05-3109:18:36.0张桂英勇担电网企业使命助力现代化新龙江建设电网调峰电网企业电力外送电网建设发电出力风电装机容量风电发展电网改造电力消纳省电力公司23010国内http://sjdb.hljnews.cn:8080/img/...</p>
-										<p class="first-news-more">详细&gt;&gt;</p>
+										<p class="first-news-more">
+											<a href="page/News.html">详细&gt;&gt;</a>
+										</p>
 									</div>
 								</div>
 							</div>
 							<div class="news-list">
 								<ul>
-									<li><span>我国拟推行电力建筑工人实名制 需登记并经基本安全培训</span><span style="float: right;font-size: 12px;"><span style="color: #999;">发布时间：</span>2017-09-09</span>
+									<li>
+										<a href="page/News.html">我国拟推行电力建筑工人实名制 需登记并经基本安全培训</a><span style="float: right;font-size: 12px;"><span style="color: #999;">发布时间：</span>2017-09-09</span>
 									</li>
-									<li><span>思考！独立售电公司面临的四大风险</span><span style="float: right;font-size: 12px;"><span style="color: #999;">发布时间：</span>2017-12-23</span>
+									<li>
+										<a href="page/News.html">思考！独立售电公司面临的四大风险</a><span style="float: right;font-size: 12px;"><span style="color: #999;">发布时间：</span>2017-12-23</span>
 									</li>
-									<li><span>干货！风电开发建设法律知识：进场道路怎样建？侵权责任如何防？</span><span style="float: right;font-size: 12px;"><span style="color: #999;">发布时间：</span>2018-04-12</span>
+									<li>
+										<a href="page/News.html">干货！风电开发建设法律知识：进场道路怎样建？侵权责任如何防？</a><span style="float: right;font-size: 12px;"><span style="color: #999;">发布时间：</span>2018-04-12</span>
 									</li>
 								</ul>
 							</div>
@@ -419,10 +264,10 @@
 					</div>
 					<div class="col-5">
 						<div class="board">
-							<img src="img/index/kj1.png" />
-							<img src="img/index/kj2.jpg" />
-							<img src="img/index/kj3.jpg" />
-							<img src="img/index/kj4.png" />
+							<a href="page/TalentConcept.html"><img src="img/index/kj1.png" /></a>
+							<a href="page/Honors.html"><img src="img/index/kj2.jpg" /></a>
+							<a href="page/ContactUs.html"><img src="img/index/kj3.jpg" /></a>
+							<a href="page/Security.html"><img src="img/index/kj4.png" /></a>
 						</div>
 					</div>
 				</div>
@@ -442,49 +287,6 @@
 				</div>
 			</div>
 		</div>
-
-		<script type="text/javascript">
-			$(function() {
-				//百叶窗轮播
-				$('.shutter').shutter({
-					shutterW: window.screen.width, // 容器宽度
-					shutterH: 600, // 容器高度
-					isAutoPlay: true, // 是否自动播放
-					playInterval: 3000, // 自动播放时间
-					//curDisplay: 0, // 当前显示页
-					fullPage: false // 是否全屏展示
-				});
-
-				new Swiper('.case-show', {
-					//		direction: '',
-					width: 1200,
-					autoplay: {
-						delay: 3000,
-						//					disableOnInteraction: false,
-						//					waitForTransition: false,
-						//					reverseDirection: true
-					},
-					loop: true,
-					simulateTouch: false,
-					//				centeredSlides: true,
-					//		setWrapperSize: true,
-					//		height:200,//你的slide高度
-					//		autoHeight:true,
-					slidesPerView: 4,
-					spaceBetween: 20,
-					effect: 'slide',
-					on: {
-						slideChangeTransitionEnd: function() {},
-					}
-				})
-
-				$('.nav-item').first().css('background-color', 'green');
-				$('.nav-item').on('mouseover', function() {
-					$(this).siblings().css('background', 'none');
-					$(this).css('background-color', 'green');
-				})
-			})
-		</script>
 	</body>
 
 </html>
